@@ -1,21 +1,21 @@
-Molerat/hetGla2	Gene/Molerat/hetGla2_genes.gff3.gz	null	null	null	Ont/Molerat/hetGla2/*.gff3*	data_hetGla2	Molerat	hetGla2
-Vervet/chlSab2	Gene/Vervet/chlSab2_genes.gff3.gz	null	null	null	Ont/Vervet/chlSab2/*.gff3*	data_chlSab2	Vervet	chlSab2
-Vervet/veroWho	Gene/Vervet/vero_WHO_p1_genes.gff3.gz	null	null	null	Ont/Vervet/Vero_WHO_p1/*.gff3*	data_veroWho	Vervet	Vero_WHO_p1.0
-Pig/pig11	Gene/Pig/susScr11_genes.gff3.gz	null	null	null	Ont/Pig/pig11/*.gff3*	data_pig11_1	Pig Sscrofa11.1
-Pig/pig10	Gene/Pig/susScr3_genes.gff3.gz	null	null	null	Ont/Pig/pig10/*.gff3*	data_pig10_2	Pig Sscrofa10.2
-Chinchilla/chinchilla10	Gene/Chinchilla/chiLan1_genes.gff3.gz	null	null	null	Ont/Chinchilla/chinchilla10/*.gff3*	data_cl1_0	Chinchilla	ChiLan1.0
-Bonobo/bonobo11	Gene/Bonobo/panPan2_genes.gff3.gz	null	null	null	Ont/Bonobo/bonobo11/*.gff3*	data_bonobo1_1	Bonobo	panpan1.1
-Bonobo/bonobo2	Gene/Bonobo/panPan3_genes.gff3.gz	null	null	null	Ont/Bonobo/bonobo2/*.gff3*	data_bonobo2	Bonobo	Mhudiblu_PPA_v0
-Dog/dog31	Gene/Dog/canFam3_genes.gff3.gz	null	null	null	Ont/Dog/dog31/*.gff3*	data_dog3_1	Dog	dog3.1
-Dog/dog634	Gene/Dog/rOS_Cfam_1_genes.gff3.gz	null	null	null	Ont/Dog/dog634/*.gff3*	data_rosCfam1	Dog	ROS_Cfam_1.0
-Squirrel/squirrel20	Gene/Squirrel/speTri2_genes.gff3.gz	null	null	null	Ont/Squirrel/squirrel20/*.gff3*	data_squirrel2_0	Squirrel	SpeTri2.0
-Rat/rn7_2	Gene/Rat/rn7_genes.gff3.gz	Qtl/Rat/rat72/Rat_RGDQTLS.gff3*	Marker/Rat/rn7_markers.gff3*	Strain/Rat/rn7*strains.gff3*	Ont/Rat/rat72/*.gff3*	data_rn7_2	Rat	mRatBN7.2
-Rat/rn6	Gene/Rat/rn6_genes.gff3.gz	Qtl/Rat/rat60/Rat_RGDQTLS.gff3*	Marker/Rat/rn6_markers.gff3*	Strain/Rat/rn6*strains.gff3*	Ont/Rat/rat60/*.gff3*	data_rgd6	Rat	rn6
-Rat/rn5	Gene/Rat/rn5_genes.gff3.gz	Qtl/Rat/rat50/Rat_RGDQTLS.gff3*	Marker/Rat/rn5_markers.gff3*	Strain/Rat/rn5*strains.gff3*	Ont/Rat/rat50/*.gff3*	data_rgd5	Rat	rn5
-Rat/rn3_4	Gene/Rat/rn4_genes.gff3.gz	Qtl/Rat/rat34/Rat_RGDQTLS.gff3*	Marker/Rat/rn3.4_markers.gff3*	Strain/Rat/rn3.4*strains.gff3*	Ont/Rat/rat34/*.gff3*	data_rgd3_4	Rat	rn3.4
-Mouse/mm39	Gene/Mouse/mm39_genes.gff3.gz	Qtl/Mouse/mouse39/Mouse_RGDQTLS.gff3*	null	null	Ont/Mouse/mouse39/*.gff3*	data_mm39	Mouse	mm39
-Mouse/mm38	Gene/Mouse/mm10_genes.gff3.gz	Qtl/Mouse/mouse38/Mouse_RGDQTLS.gff3*	Marker/Mouse/mm10_markers.gff3*	null	Ont/Mouse/mouse38/*.gff3*	data_mm38	Mouse	mm38
-Mouse/mm37	Gene/Mouse/mm9_genes.gff3.gz	Qtl/Mouse/mouse37/Mouse_RGDQTLS.gff3*	Marker/Mouse/mm9_markers.gff3*	null	Ont/Mouse/mouse37/*.gff3*	data_mm37	Mouse	mm37
-Human/hg38	Gene/Human/hg38_genes.gff3.gz	Qtl/Human/human38/Human_RGDQTLS.gff3*	null	null	Ont/Human/human38/*.gff3*	data_hg38	Human	hg38
-Human/hg19	Gene/Human/hg19_genes.gff3.gz	Qtl/Human/human37/Human_RGDQTLS.gff3*	Marker/Human/hg19_markers.gff3*	null	Ont/Human/human37/*.gff3*	data_hg19	Human	hg19
-Human/hg18	Gene/Human/hg18_genes.gff3.gz	Qtl/Human/human36/Human_RGDQTLS.gff3*	Marker/Human/hg18_markers.gff3*	null	Ont/Human/human36/*.gff3*	data_hg18	Human	hg18
+Molerat/hetGla2	Gene/Molerat/hetGla2_genes_and_transcripts.gff3.gz	null	null	null	Ont/Molerat/hetGla2/*.gff3*	data_hetGla2	Molerat	hetGla2	Gene/Molerat/hetGla2_genes_only.gff3.gz
+Vervet/chlSab2	Gene/Vervet/chlSab2_genes_and_transcripts.gff3.gz	null	null	null	Ont/Vervet/chlSab2/*.gff3*	data_chlSab2	Vervet	chlSab2	Gene/Vervet/chlSab2_genes_only.gff3.gz
+Vervet/veroWho	Gene/Vervet/vero_WHO_p1_genes_and_transcripts.gff3.gz	null	null	null	Ont/Vervet/Vero_WHO_p1/*.gff3*	data_veroWho	Vervet	Vero_WHO_p1.0	Gene/Vervet/vero_WHO_p1_genes_only.gff3.gz
+Pig/pig11	Gene/Pig/susScr11_genes_and_transcripts.gff3.gz	null	null	null	Ont/Pig/pig11/*.gff3*	data_pig11_1	Pig Sscrofa11.1	Gene/Pig/susScr11_genes_only.gff3.gz
+Pig/pig10	Gene/Pig/susScr3_genes_and_transcripts.gff3.gz	null	null	null	Ont/Pig/pig10/*.gff3*	data_pig10_2	Pig Sscrofa10.2	Gene/Pig/susScr3_genes_only.gff3.gz
+Chinchilla/chinchilla10	Gene/Chinchilla/chiLan1_genes_and_transcripts.gff3.gz	null	null	null	Ont/Chinchilla/chinchilla10/*.gff3*	data_cl1_0	Chinchilla	ChiLan1.0	Gene/Chinchilla/chiLan1_genes_only.gff3.gz
+Bonobo/bonobo11	Gene/Bonobo/panPan2_genes_and_transcripts.gff3.gz	null	null	null	Ont/Bonobo/bonobo11/*.gff3*	data_bonobo1_1	Bonobo	panpan1.1	Gene/Bonobo/panPan2_genes_only.gff3.gz
+Bonobo/bonobo2	Gene/Bonobo/panPan3_genes_and_transcripts.gff3.gz	null	null	null	Ont/Bonobo/bonobo2/*.gff3*	data_bonobo2	Bonobo	Mhudiblu_PPA_v0	Gene/Bonobo/panPan3_genes_only.gff3.gz
+Dog/dog31	Gene/Dog/canFam3_genes_and_transcripts.gff3.gz	null	null	null	Ont/Dog/dog31/*.gff3*	data_dog3_1	Dog	dog3.1	Gene/Dog/canFam3_genes_only.gff3.gz
+Dog/dog634	Gene/Dog/rOS_Cfam_1_genes_and_transcripts.gff3.gz	null	null	null	Ont/Dog/dog634/*.gff3*	data_rosCfam1	Dog	ROS_Cfam_1.0	Gene/Dog/rOS_Cfam_1_genes_only.gff3.gz
+Squirrel/squirrel20	Gene/Squirrel/speTri2_genes_and_transcripts.gff3.gz	null	null	null	Ont/Squirrel/squirrel20/*.gff3*	data_squirrel2_0	Squirrel	SpeTri2.0	Gene/Squirrel/speTri2_genes_only.gff3.gz
+Rat/rn7_2	Gene/Rat/rn7_genes_and_transcripts.gff3.gz	Qtl/Rat/rat72/Rat_RGDQTLS.gff3*	Marker/Rat/rn7_markers.gff3*	Strain/Rat/rn7*strains.gff3*	Ont/Rat/rat72/*.gff3*	data_rn7_2	Rat	mRatBN7.2	Gene/Rat/rn7_genes_only.gff3.gz
+Rat/rn6	Gene/Rat/rn6_genes_and_transcripts.gff3.gz	Qtl/Rat/rat60/Rat_RGDQTLS.gff3*	Marker/Rat/rn6_markers.gff3*	Strain/Rat/rn6*strains.gff3*	Ont/Rat/rat60/*.gff3*	data_rgd6	Rat	rn6	Gene/Rat/rn6_genes_only.gff3.gz
+Rat/rn5	Gene/Rat/rn5_genes_and_transcripts.gff3.gz	Qtl/Rat/rat50/Rat_RGDQTLS.gff3*	Marker/Rat/rn5_markers.gff3*	Strain/Rat/rn5*strains.gff3*	Ont/Rat/rat50/*.gff3*	data_rgd5	Rat	rn5	Gene/Rat/rn5_genes_only.gff3.gz
+Rat/rn3_4	Gene/Rat/rn4_genes_and_transcripts.gff3.gz	Qtl/Rat/rat34/Rat_RGDQTLS.gff3*	Marker/Rat/rn3.4_markers.gff3*	Strain/Rat/rn3.4*strains.gff3*	Ont/Rat/rat34/*.gff3*	data_rgd3_4	Rat	rn3.4	Gene/Rat/rn4_genes_only.gff3.gz
+Mouse/mm39	Gene/Mouse/mm39_genes_and_transcripts.gff3.gz	Qtl/Mouse/mouse39/Mouse_RGDQTLS.gff3*	null	null	Ont/Mouse/mouse39/*.gff3*	data_mm39	Mouse	mm39	Gene/Mouse/mm39_genes_only.gff3.gz
+Mouse/mm38	Gene/Mouse/mm10_genes_and_transcripts.gff3.gz	Qtl/Mouse/mouse38/Mouse_RGDQTLS.gff3*	Marker/Mouse/mm10_markers.gff3*	null	Ont/Mouse/mouse38/*.gff3*	data_mm38	Mouse	mm38	Gene/Mouse/mm10_genes_only.gff3.gz
+Mouse/mm37	Gene/Mouse/mm9_genes_and_transcripts.gff3.gz	Qtl/Mouse/mouse37/Mouse_RGDQTLS.gff3*	Marker/Mouse/mm9_markers.gff3*	null	Ont/Mouse/mouse37/*.gff3*	data_mm37	Mouse	mm37	Gene/Mouse/mm9_genes_only.gff3.gz
+Human/hg38	Gene/Human/hg38_genes_and_transcripts.gff3.gz	Qtl/Human/human38/Human_RGDQTLS.gff3*	null	null	Ont/Human/human38/*.gff3*	data_hg38	Human	hg38	Gene/Human/hg38_genes_only.gff3.gz
+Human/hg19	Gene/Human/hg19_genes_and_transcripts.gff3.gz	Qtl/Human/human37/Human_RGDQTLS.gff3*	Marker/Human/hg19_markers.gff3*	null	Ont/Human/human37/*.gff3*	data_hg19	Human	hg19	Gene/Human/hg19_genes_only.gff3.gz
+Human/hg18	Gene/Human/hg18_genes_and_transcripts.gff3.gz	Qtl/Human/human36/Human_RGDQTLS.gff3*	Marker/Human/hg18_markers.gff3*	null	Ont/Human/human36/*.gff3*	data_hg18	Human	hg18	Gene/Human/hg18_genes_only.gff3.gz
